--- a/GradeApp/templates/invalid.html
+++ b/GradeApp/templates/invalid.html
@@ -10,7 +10,7 @@
 <img src="{% static "GradeApp/img/invalid.png" %}" style="height:600px; padding: 0; horiz-align: center">
 </div>
 <div style="text-align: center">
-<button onclick="location.href = '../polls/'" type="button" autofocus style="height: 25px; width: 600px; horiz-align: center">Try Again</button>
+<button onclick="location.href = '../'" type="button" autofocus style="height: 25px; width: 600px; horiz-align: center">Try Again</button>
 </div>
 </body>
 </html>
