--- a/GradeApp/templates/result.html
+++ b/GradeApp/templates/result.html
@@ -10,7 +10,9 @@
 
 </head>
 <body style="background-color: black">
-<h1 style="text-align: center; color: #b1dfbb">Welcome {{ name }}!!!</h1>
+<h1 style="text-align: center; color: #b1dfbb;">Welcome {{ name }}!!!<br>
+In case your Qalam Score has been updated, keep us notified by <a href="./forget/?uname={{ uname }}&section={{ section }}">clicking here</a>
+</h1>
 <div>
     <table style="background-color: #d4edda; border: 20px solid gainsboro;margin-left: auto; margin-right: auto; text-align: center">
         <tbody>
