--- a/GradeApp/templates/result.html
+++ b/GradeApp/templates/result.html
@@ -20,37 +20,43 @@ In case your Qalam Score has been updated, keep us notified by <a href="./forget
             <th style="width: 400px">Subject</th>
             <th style="width: 150px;">Aggregate</th>
             <th style="width: 150px;">Grade(Expected)</th>
+            <th style="width: 250px;">Jump Up Chance</th>
         </tr>
         <tr style="background-blend-mode: overlay;">
             <td style="text-align: left">Applied Physics</td>
             <td>{{ aggAP }}</td>
             <td>{{ grAP }}</td>
+            <td>{{ pAP }}</td>
         </tr>
             <tr>
             <td style="text-align: left">Calculus-II</td>
             <td>{{ aggCAL }}</td>
             <td>{{ grCAL }}</td>
+            <td>{{ pCAL }}</td>
         </tr>
             <tr>
             <td style="text-align: left">Digital Logic Design</td>
             <td>{{ aggDLD }}</td>
             <td>{{ grDLD }}</td>
+            <td>{{ pDLD }}</td>
         </tr>
             <tr>
             <td style="text-align: left">Object Oriented Programming</td>
             <td>{{ aggOOP }}</td>
             <td>{{ grOOP }}</td>
+            <td>{{ pOOP }}</td>
         </tr>
             <tr>
             <td style="text-align: left">Islamic Studies</td>
             <td>{{ aggISL }}</td>
             <td>{{ grISL }}</td>
-        </tr>
+            <td>{{ pISL }}</td>
         </tr>
         <tr>
             <td style="text-align: left">Introduction To Management</td>
             <td>{{ aggITM }}</td>
             <td>{{ grITM }}</td>
+            <td>{{ pITM }}</td>
         </tr>
 
         </tbody>
